Update bugs URL to new repository

--- a/package.json
+++ b/package.json
@@ -76,15 +76,14 @@
     "postcss": "^8.5.3"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ademizhann/medhelper-frontend.git"
+    "url": "git+https://github.com/ademizhann/forntmh.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ademizhann/medhelper-frontend/issues"
+    "url": "https://github.com/ademizhann/forntmh/issues"  
   }
 }
