--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "styled-components": "^6.1.16",
     "swiper": "^11.2.5",
     "tesseract.js": "^6.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webpack-dev-server": "^4.15.1",
     "xlsx": "^0.18.5"
@@ -75,6 +76,10 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.8.1"
+  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "repository": {
     "type": "git",
@@ -84,6 +89,6 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ademizhann/forntmh/issues"  
+    "url": "https://github.com/ademizhann/forntmh/issues"
   }
 }
