Обновила ревьюс и packagex

--- a/package.json
+++ b/package.json
@@ -3,50 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@react-oauth/google": "^0.12.1",
-    "@shadcn/ui": "^0.0.4",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "ai": "^4.1.61",
-    "ajv": "8.11.0",
-    "ajv-keywords": "5.1.0",
-    "axios": "^1.8.4",
-    "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "framer-motion": "^12.4.10",
-    "i18next": "^24.2.2",
-    "i18next-browser-languagedetector": "^8.0.4",
-    "i18next-http-backend": "^3.0.2",
-    "jspdf": "^3.0.1",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.477.0",
-    "mongoose": "^8.13.0",
-    "openai": "^4.97.0",
-    "pdfjs-dist": "^2.16.105",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^15.4.1",
-    "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.2.0",
-    "react-scripts": "^5.0.1",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.16",
-    "swiper": "^11.2.5",
-    "tesseract.js": "^6.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "xlsx": "^0.18.5"
+    "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.18.0",
+    "socket.io-client": "^4.7.2",
+    "swiper": "^8.4.7",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -73,8 +50,19 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.3"
+    "@svgr/webpack": "^8.1.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^3.0.2"
+  },
+  "resolutions": {
+    "nth-check": "^2.1.1",
+    "css-select": "^5.1.0",
+    "postcss": "^8.4.31"
   },
   "engines": {
     "node": ">=18.0.0",
